--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -52,8 +52,6 @@ parts:
     plugin: dump
     build-packages:
       - wget
-    stage-packages:
-      - zenity  
     override-pull: |
       snapcraftctl pull
       snapcraftctl set-version $(git describe --tags --abbrev=0 | cut -c 2-)
@@ -73,9 +71,20 @@ parts:
       - -lib/$SNAPCRAFT_ARCH_TRIPLET/libparted-fs-resize.so*
       - -usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libbd_part_err.so*
       - -usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libpanelw.so*
- 
-  fatloss:
+  
+  
+  zenity:
     after: [thonny]
+    source: https://gitlab.gnome.org/GNOME/zenity.git
+    source-tag: 'ZENITY_3_32_0'
+    plugin: meson
+    meson-version: 1.2.0
+    meson-parameters:
+      - --prefix=/usr
+      - --buildtype=release
+    
+  fatloss:
+    after: [zenity]
     plugin: nil 
     override-prime: |
       snapcraftctl prime
