--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -57,6 +57,9 @@ parts:
       VER="$(git describe --tags --abbrev=0 | cut -c 2-)"
       wget -q -O- https://github.com/thonny/thonny/releases/download/v${VER}/thonny-${VER}-x86_64.tar.gz |\
            tar xzf - --strip-components=1 -C $SNAPCRAFT_PART_SRC
+    override-prime: |
+      snapcraftctl prime
+      sed -e 's|Icon=thonny|Icon=${SNAP}/packaging/icons/thonny-256x256.png|' -i packaging/linux/org.thonny.Thonny.desktop         
     prime:
       - -lib/$SNAPCRAFT_ARCH_TRIPLET/libhistory.so*
       - -lib/$SNAPCRAFT_ARCH_TRIPLET/libtinfo.so*
