--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -6,8 +6,6 @@ confinement: strict
 compression: lzo
 architectures:
   - build-on: amd64
-  - build-on: arm64
-  - build-on: armhf
 
 slots:
   thonny:
@@ -22,6 +20,7 @@ apps:
     common-id: org.thonny.Thonny
     environment:
       THONNY_USER_DIR: $SNAP_USER_DATA
+      PYTHONPATH: PYTHONPATH: ${SNAP}/lib64/python3.10/site-packages:${SNAP}/lib/python3.10/site-packages:${SNAP}/usr/lib/python3/dist-packages:${SNAP}/usr/local/lib/python3.10/dist-packages
     plugs:
       - home
       - network
@@ -30,79 +29,65 @@ apps:
       - audio-playback
       - audio-record
       - bluez
-      - avahi-control
-      - avahi-observe
-      - bluetooth-control
       - camera
       - hardware-observe
       - system-observe
       - process-control
       - optical-drive
-      - raw-usb
       - removable-media
       - unity7
       - screen-inhibit-control
       - udisks2
       - upower-observe
-    desktop: packaging/linux/org.thonny.Thonny.desktop   
+    desktop: utils/org.thonny.Thonny.desktop   
 
 parts:
   thonny:
+    plugin: python
     source: https://github.com/thonny/thonny.git
+    source-tag: v4.1.2
     parse-info: [packaging/linux/org.thonny.Thonny.appdata.xml]
-    after: [zenity]
-    plugin: dump
-    build-packages:
-      - wget
-      - curl
-      - build-essential
+    build-environment:
+      - PATH: ${CRAFT_PART_INSTALL}/bin:${PATH}
+      - PYTHONPATH: ""
     override-pull: |
       craftctl default
-      craftctl set version=$(git describe --tags --abbrev=0 | cut -c 2-)
-      VER="$(git describe --tags --abbrev=0 | cut -c 2-)"
-      wget -q -O- https://github.com/thonny/thonny/releases/download/v${VER}/thonny-${VER}-x86_64.tar.gz |\
-           tar xzf - --strip-components=1 -C $CRAFT_PART_SRC
-    stage-packages:
-      - libncursesw5
-      - libtinfo5
-      - libgdbm6
-      - libreadline8
-      - libffi8
-      - libfreetype6
-      - libfontconfig1
-      - libpng16-16
-      - libx11-6
-      - libxau6
-      - libxcb1
-      - libxdmcp6
-      - libxft2
-      - libxrender1
-      - udisks2
-      - python3-dbus
-    prime:
-      - -lib/$CRAFT_ARCH_TRIPLET/libhistory.so*
-      - -lib/$CRAFT_ARCH_TRIPLET/libtinfo.so*
-      - -usr/lib/$CRAFT_ARCH_TRIPLET/libbd_fs.so* 
-      - -usr/lib/$CRAFT_ARCH_TRIPLET/libbd_loop.so* 
-      - -usr/lib/$CRAFT_ARCH_TRIPLET/libbd_part.so*
-      - -usr/lib/$CRAFT_ARCH_TRIPLET/libbd_swap.so*
-      - -usr/lib/$CRAFT_ARCH_TRIPLET/libformw.so*
-      - -usr/lib/$CRAFT_ARCH_TRIPLET/libmenuw.so*
-      - -usr/lib/$CRAFT_ARCH_TRIPLET/libtic.so*
-      - -lib/$CRAFT_ARCH_TRIPLET/libparted-fs-resize.so*
-      - -usr/lib/$CRAFT_ARCH_TRIPLET/libbd_part_err.so*
-      - -usr/lib/$CRAFT_ARCH_TRIPLET/libpanelw.so*
+      sed -e 's|Exec=/usr/bin/thonny %F|Exec=bin/thonny %F|' -i packaging/linux/org.thonny.Thonny.desktop
+      sed -e 's|Icon=thonny|Icon=${SNAP}/utils/thonny-256x256.png|' -i packaging/linux/org.thonny.Thonny.desktop
+      mkdir $CRAFT_PART_SRC/utils
+      cp packaging/linux/org.thonny.Thonny.desktop $CRAFT_PART_SRC/utils
+      cp packaging/icons/thonny-256x256.png $CRAFT_PART_SRC/utils
+    stage:
+      - -bin/activate
+      - -bin/activate.csh
+      - -bin/activate.fish
+      - -bin/Activate.ps1
+      - -bin/python
+      - -bin/python3
+      - -bin/python3.10
+      - -bin/pip
+      - -bin/pip3
+      - -bin/pip3.11
+      - -pyvenv.cfg
+      - -lib/python3.10/site-packages/setuptools*
+      - -lib/python3.10/site-packages/pip*
+      - -share/python-wheels
+      - -share/doc
+      - -share/man
+       
   zenity:
     source: https://gitlab.gnome.org/GNOME/zenity.git
     source-tag: 3.44.1
+    after: [thonny]
     plugin: meson
     meson-parameters:
       - -Dprefix=/usr
-    build-packages:
-      - build-essential
-  
+    stage:
+      - usr/bin
+      - usr/share/zenity  
+   
   cleanup:
-    after: [thonny]
+    after: [zenity]
     plugin: nil
     build-snaps: [core22, gtk-common-themes, gnome-42-2204]
     override-prime: |
