--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -21,7 +21,7 @@ apps:
     environment:
       THONNY_USER_DIR: $SNAP_USER_DATA
       TMPDIR: $XDG_RUNTIME_DIR
-      PYTHONPATH: ${SNAP}/lib64/python3.10/site-packages:${SNAP}/lib/python3.10/site-packages:${SNAP}/usr/lib/python3/dist-packages:${SNAP}/usr/local/lib/python3.10/dist-packages:${SNAP}/usr/lib/python3.10
+      PYTHONPATH: ${SNAP}/lib/python3.10/site-packages:${SNAP}/usr/lib/python3/dist-packages:${SNAP}/usr/local/lib/python3.10/dist-packages
     common-id: org.thonny.Thonny
     desktop: utils/org.thonny.Thonny.desktop 
     plugs:
@@ -55,24 +55,18 @@ parts:
       - PATH: ${CRAFT_PART_INSTALL}/bin:${PATH}
       - PYTHONPATH: ""
     stage:
-      - -bin/activate
-      - -bin/activate.csh
-      - -bin/activate.fish
-      - -bin/Activate.ps1
-      - -bin/python
-      - -bin/python3
-      - -bin/python3.10
-      - -bin/pip
-      - -bin/pip3
-      - -bin/pip3.11
-      - -pyvenv.cfg
-      - -lib/python3.10/site-packages/setuptools*
-      - -lib/python3.10/site-packages/pip*
       - -share/python-wheels
       - -share/doc
       - -share/man
+      - -bin/activate*
+      - -bin/Activate.ps1
+      - -bin/python*
+      - -bin/pip*
+      - -pyvenv.cfg
+      - -lib/**/setuptools*
+      - -lib/**/pip* 
   
-  utils: # For Using Upstream Desktop and Icon Files.
+  utils: 
     source: https://github.com/thonny/thonny.git
     source-tag: v4.1.2
     after: [thonny]
@@ -84,45 +78,21 @@ parts:
       mkdir utils
       cp packaging/linux/org.thonny.Thonny.desktop utils
       cp packaging/icons/thonny-256x256.png utils
-    stage:
+    prime:
       - utils
-         
-  zenity: # For accessing gtk-file-portal by thonny.
-    source: https://gitlab.gnome.org/GNOME/zenity.git
-    source-tag: 3.44.1
+
+  sundry-deps: 
     after: [utils]
-    plugin: meson
-    meson-parameters:
-      - -Dprefix=/usr
-    stage:
-      - usr/bin
-      - usr/share/zenity 
-       
-  sundry-deps: # For sundry reasons.
-    after: [zenity]
     plugin: nil  
     stage-packages:
       - libnotify-bin
       - xclip
       - python3-tk
-      - libxmu6
-      - tk8.6-blt2.5
-      - libtcl8.6
-      - libtk8.6
-      - libxss1
+      - zenity
     prime:
-      - usr/lib/python3.10/lib-dynload
-      - usr/lib/python3.10/tkinter
-      - usr/bin/notify*
-      - usr/bin/xclip*
-      - usr/lib/*/libXmu.so*
-      - usr/lib/blt2.5
-      - usr/lib/libBLT.2.5.so.8.6
-      - usr/lib/*/libtcl8.6.so*
-      - usr/share/tcltk
-      - usr/lib/*/libtk8.6.so*
-      - usr/lib/tcltk
-      - usr/lib/*/libXss.so*
+      - usr/lib
+      - usr/bin
+      - usr/share/zenity
        
   cleanup:
     after: [sundry-deps]
@@ -131,6 +101,6 @@ parts:
     override-prime: |
       set -eux
       for snap in "core22" "gtk-common-themes" "gnome-42-2204"; do
-        cd "/snap/$snap/current" && find . -type f,l -name *.so.* -exec rm -f "$CRAFT_PRIME/{}" \;
+          cd "/snap/$snap/current" && find . -type f,l -name *.so.* -exec rm -f "$CRAFT_PRIME/{}" \;
       done    
  
