--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -92,6 +92,8 @@ parts:
     prime:
       - usr/lib/python*
       - usr/lib/tcltk*
+      - usr/lib/*/libtk8.6.so*
+      - usr/lib/*/libtcl8.6.so*
       - usr/lib/blt2.5*
       - usr/lib/libBLT.2.5.so*
       - usr/lib/*/libXss.so*
