--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,3 +1,8 @@
+'''
+This Branch Is WIP or Canary level, used for deciding future of Thonny Snap.
+Will constantly change including snap bases etc.
+Branch needs lots of Polishing/Fixes/Stabilization.
+'''
 name: thonny
 base: core18
 adopt-info: thonny
@@ -21,6 +26,7 @@ apps:
     environment:
       THONNY_USER_DIR: $SNAP_USER_DATA
       TMPDIR: $XDG_RUNTIME_DIR
+      PYTHONPATH: ${SNAP}/usr/local/bin:${SNAP}/usr/local/lib
     plugs:
       - home
       - unity7
@@ -42,8 +48,24 @@ apps:
     desktop: packaging/linux/org.thonny.Thonny.desktop   
 
 parts:
+  python:
+    source: https://www.python.org/ftp/python/3.11.5/Python-3.11.5.tgz
+    source-checksum: md5/b628f21aae5e2c3006a12380905bb640
+    plugin: make
+    make-parameters:
+      - --enable-optimizations
+    build-packages: 
+      - libncurses5-dev 
+      - libgdbm-dev 
+      - libnss3-dev 
+      - libssl-dev 
+      - libreadline-dev 
+      - libffi-dev 
+      - libbz2-dev 
+      
   thonny:
     source: https://github.com/thonny/thonny.git
+    after: [python]
     parse-info: [packaging/linux/org.thonny.Thonny.appdata.xml]
     plugin: dump
     build-packages:
